2002-12-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseParser.cs: use MapPath and context to locate files.
	* Control.cs: implemented MapPathSecure.
	* TemplateControl.cs: use UrlUtils to generate the path.
	* TemplateControlParser.cs: use the context and MapPath.
	* UserControl.cs: implemented MapPath.
	* UserControlParser.cs: added context parameter to constructor.

2002-12-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: implemented MapPathSecure.
	* Page.cs: fixed Server property.

2002-12-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataBinder.cs: try the indexer if the property is not found in
	GetPropertyValue ().

2002-12-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: added AutoEventWireup internal property.

	* Page.cs: removed page events wire up from here.

	* TemplateControl.cs: new method WireupAutomaticEvents to hook up page
	and user controls events.

	* TemplateControlParser.cs: process the options that are applicable
	once we have the instance of the control.

	* TemplateParser.cs: also stores the options.

	* UserControl.cs: hook up events before initializing the control.


2002-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: new method to set bindingContainer value.
	* TemplateControl.cs: added controls are not binding containers.

2002-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: implemented TemplateSourceDirectory.
	* TemplateControl.cs: implemented LoadControl and LoadTemplate.

2002-11-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UserControl.cs: fixed SetAttribute.
	* UserControlParser.cs: set the correct base type.

2002-11-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateParser.cs: fixed BaseType.
	* UserControlParser.cs: helper class to compile user controls.

2002-11-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* LosFormatter.cs: added DateTime to special types.

2002-11-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>
